// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLinks authed Sourcegraph.com /foo 1`] = `
Array [
  "Search /search",
  "WebActionsNavItems",
  "Explore /explore",
  "CampaignsNavItem",
  "WebCommandListPopoverButton",
  "UserNavItem",
]
`;

exports[`NavLinks authed Sourcegraph.com /search 1`] = `
Array [
  "WebActionsNavItems",
  "Explore /explore",
  "CampaignsNavItem",
  "WebCommandListPopoverButton",
  "UserNavItem",
]
`;

exports[`NavLinks authed self-hosted /foo 1`] = `
Array [
  "Search /search",
  "WebActionsNavItems",
  "Explore /explore",
  "CampaignsNavItem",
  "WebCommandListPopoverButton",
  "UserNavItem",
]
`;

exports[`NavLinks authed self-hosted /search 1`] = `
Array [
  "WebActionsNavItems",
  "Explore /explore",
  "CampaignsNavItem",
  "WebCommandListPopoverButton",
  "UserNavItem",
]
`;

exports[`NavLinks unauthed Sourcegraph.com /foo 1`] = `
Array [
  "Search /search",
  "WebActionsNavItems",
  "CampaignsNavItem",
  "Extensions /extensions",
  "Sign in /sign-in",
  "About https://about.sourcegraph.com",
  "Help /help",
  "WebCommandListPopoverButton",
]
`;

exports[`NavLinks unauthed Sourcegraph.com /search 1`] = `
Array [
  "WebActionsNavItems",
  "CampaignsNavItem",
  "Extensions /extensions",
  "Sign in /sign-in",
  "About https://about.sourcegraph.com",
  "Help /help",
  "WebCommandListPopoverButton",
]
`;

exports[`NavLinks unauthed self-hosted /foo 1`] = `
Array [
  "Search /search",
  "WebActionsNavItems",
  "Explore /explore",
  "CampaignsNavItem",
  "Extensions /extensions",
  "Sign in /sign-in",
  "Help /help",
  "WebCommandListPopoverButton",
]
`;

exports[`NavLinks unauthed self-hosted /search 1`] = `
Array [
  "WebActionsNavItems",
  "Explore /explore",
  "CampaignsNavItem",
  "Extensions /extensions",
  "Sign in /sign-in",
  "Help /help",
  "WebCommandListPopoverButton",
]
`;
